--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,29 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
+    "coverage:dev": "react-scripts test --coverage --watchAll",
+    "coverage:prod": "react-scripts test --coverage",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!coverage/**",
+      "!node_modules/**",
+      "!src/index.js",
+      "!src/setupTests.js",
+      "!public/**",
+      "!build/**"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "json",
+      "text",
+      "clover",
+      "cobertura"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -37,8 +58,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@testing-library/react": "^16.0.1",
     "jest": "^27.5.1",
+    "jest-junit": "^16.0.0",
     "tailwindcss": "^3.4.10"
   }
 }
