--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --testMatch '**/src/**/*.test.js'",
     "coverage:dev": "react-scripts test --coverage --watchAll",
     "coverage:prod": "react-scripts test --coverage",
     "eject": "react-scripts eject"
